# decision-agent/agent-backend/agent-factory/cmd/openapi-docs/generated/swagger/swagger.yaml
@@ -536,6 +536,15 @@ definitions:
         description: 是否启用
         type: boolean
     type: object
+  daconfvalobj.NonDolphinModeConfig:
+    properties:
+      disable_history_in_a_conversation:
+        description: 是否禁用单次会话的历史记录
+        type: boolean
+      disable_llm_cache:
+        description: 是否禁用LLM缓存
+        type: boolean
+    type: object
   daconfvalobj.OpeningRemarkConfig:
     properties:
       dynamic_opening_remark_prompt:
@@ -1237,6 +1246,10 @@ definitions:
         allOf:
         - $ref: '#/definitions/daconfvalobj.ConfigMetadata'
         description: 配置元数据
+      non_dolphin_mode_config:
+        allOf:
+        - $ref: '#/definitions/daconfvalobj.NonDolphinModeConfig'
+        description: 非Dolphin模式配置
       opening_remark_config:
         allOf:
         - $ref: '#/definitions/daconfvalobj.OpeningRemarkConfig'
